Pull request #72: Feature/WDZO-1193
redesign users page

Squashed commit of the following:

commit ecf90dff1a7936d4fad0c248ce260735b1c0777d
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Dec 21 16:01:32 2020 +0300

    WDZO-1193-users: hide button "create new app"

commit 6619ddb4d9e322ea253293f511b95cde0655a49e
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Dec 21 13:45:21 2020 +0300

    WDZO-1193-users: fix change page size on last page

commit 98320e013d2d34017a77bde6097546512741e735
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Dec 21 12:06:54 2020 +0300

    WDZO-1193-users: fix routes for userManager and users page

commit ad06523eb904f54580d475fe13ccc1e750eaef9b
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Mon Dec 21 09:01:03 2020 +0300

    WDZO-973: close button in Dashboard removed, css fixed

commit 52cceb63e296e8e806d30ad3274b6968112604cb
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Dec 21 08:25:07 2020 +0300

    WDZO-1193-users: add logout btn in header.
    some refactoring

commit 19973495622a1e92c4077169832fd615a936f8e4
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 18 16:33:43 2020 +0300

    WDZO-1193-users: fix for pagination

commit 7785ac65fd0702318d204ad1ce3184b921617574
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 18 16:15:35 2020 +0300

    WDZO-1193-users: added pagination for users table

commit 7c509efcad47fd7cab3fcd89c0ff4e786d7f7cb7
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Dec 18 15:19:36 2020 +0300

    WDZO-1193-users: Added user creation notifications, added modal when deleting user

commit a6be2579012ea12d42e2ed24fbb2bab057ca3440
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Dec 17 17:00:35 2020 +0300

    WDZO-1193-users: add Dashboard page for admin and Owner.
    remove sort users by blocked.
    add redesign users page for Owner and userManager roles.
    added dynamic menu for roles

commit a

--- a/src/components/Checkboxes/Checkboxes.module.css
+++ b/src/components/Checkboxes/Checkboxes.module.css
@@ -1,6 +1,9 @@
 .checkbox {
     display: block;
     margin: 0 !important;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .checkbox > label {
@@ -8,14 +11,13 @@
 }
 
 .checkbox :global(.ant-checkbox-inner) {
-    width: 25px;
-    height: 25px;
-    border-radius: 7px;
+    width: 18px;
+    height: 18px;
     outline: none;
 }
 
 .checkbox :global(.ant-checkbox-checked .ant-checkbox-inner) {
-    background-color: #21ba72;
+    background-color: #09a552;
     border-color: #d9d9d9;
 }
 
@@ -24,16 +26,17 @@
 }
 
 .checkbox :global(.ant-checkbox-input:hover + .ant-checkbox-inner) {
-    border-color: #21ba72;
+    border-color: #09a552;
 }
 
 .checkbox :global(.ant-checkbox-checked .ant-checkbox-inner)::after {
-    width: 10px;
-    height: 13px;
+    width: 5px;
+    height: 9px;
 }
 
-.checkbox :global(.ant-checkbox-disabled.ant-checkbox-checked .ant-checkbox-inner::after){
-    border-color:#fff;
+.checkbox :global(.ant-checkbox-disabled.ant-checkbox-checked .ant-checkbox-inner::after) {
+    border-color: #fff;
+    left: 25% !important;
 }
 
 .checkbox :global(.ant-checkbox:hover::after),
@@ -41,7 +44,28 @@
     visibility: hidden;
 }
 
+.checkbox :global(.ant-checkbox-checked + span) {
+    color: #494949;
+}
+
+.checkbox :global(.ant-checkbox-wrapper) {
+    flex-basis: 33%;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.checkboxAllApps :global(.ant-checkbox-wrapper) {
+    flex-wrap: nowrap;
+}
+
 .checkboxAllApps {
-    margin-top: 25px;
-    margin-bottom: 30px;
+    flex-basis: 20%;
+    min-width: 135px;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+
+.checkboxAllApps > label > span ~ span {
+    min-width: 140px;
 }
