--- a/src/containers/Dashboard/DashboardItem/DashboardItem.module.css
+++ b/src/containers/Dashboard/DashboardItem/DashboardItem.module.css
@@ -1,6 +1,5 @@
 .item {
     width: calc(50% - 8px);
-    height: 480px;
     padding: 8px;
     margin-bottom: 16px;
     display: flex;
@@ -9,7 +8,12 @@
     background-color: #ffffff;
 }
 
-.item:nth-last-child(-n+2) {
+.item:last-child:nth-child(odd) {
+    margin-bottom: 0;
+}
+
+.item:nth-last-child(2):nth-child(odd),
+.item:last-child:nth-child(even) {
     margin-bottom: 0;
 }
 
