--- a/src/containers/TableUser/ButtonUsers/ButtonUsers.module.css
+++ b/src/containers/TableUser/ButtonUsers/ButtonUsers.module.css
@@ -1,56 +1,58 @@
-.btn {
-    margin: 0 5px;
-    text-transform: uppercase;
-}
-
 .btnGreen {
     color: white;
-    background-color: #21ba72;
-    border-color: #21ba72;
+    background-color: #09a552;
+    border-color: #09a552;
+    border: 1px solid transparent !important;
 }
 
 .btnRed {
     border-color: #ec454d;
     background-color: #ec454d;
     color: white;
+    border: 1px solid transparent !important;
 }
 
 .btnGray {
     color: white;
     background-color: #333f48;
     border-color: #333f48;
+    border: 1px solid transparent !important;
 }
 
 .greyButton {
     background-color: #EDEEEF;
     color: #000000;
     box-shadow: none;
+    border: 1px solid transparent !important;
 }
 
 .btnMT {
     margin-top: 15px !important;
 }
 
-.Link:hover {
-    color: black;
+.link:hover {
+    color: #000000;
 }
 
 .addButton {
     margin: 0 5px;
-    font-size: 16px;
-    text-transform: uppercase;
-    border: none;
+    font-size: 14px;
+    border: 1px solid #d9d9d9;
     outline: none;
-    padding: 8px 30px 8px 30px;
-    border-radius: 50px;
+    padding: 4px 15px;
+    border-radius: 2px;
     cursor: pointer;
+}
+
+.firstButton {
+    margin-left: 0 !important;
 }
 
 .addButton:disabled,
 .addButton[disabled] {
-    border: 1px solid #999999;
-    background-color:#f7f7f7;
-    color: #666666;
+    background-color: #e0e2eb;
+    color: #777777;
+    outline: none;
     box-shadow: none;
     cursor: default;
 }
