--- a/src/containers/TableUser/EmptyUsersPage/EmptyUsersPage.module.css
+++ b/src/containers/TableUser/EmptyUsersPage/EmptyUsersPage.module.css
@@ -1,39 +1,21 @@
-.container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-
-.userContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
 .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 15px 35px;
 }
 
 .article {
-    font-family: Roboto;
     font-size: 25px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
+    font-weight: 600;
+    letter-spacing: -0.3px;
 }
 
 .description {
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
+    font-size: 16px;
+    color: #9ca3ac;
+    letter-spacing: -0.3;
 }
 
 .buttonsContainer {
     display: flex;
-    flex-direction: column;
 }
