--- a/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserFormButtonGroup/UserFormButtonGroup.module.css
+++ b/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserFormButtonGroup/UserFormButtonGroup.module.css
@@ -1,46 +1,43 @@
 .submitButton {
-    height: 45px !important;
+    height: 35px !important;
     padding-left: 25px !important;
     padding-right: 25px !important;
-    text-transform: uppercase;
-    background: #21ba72 !important;
-    border-color: #21ba72 !important;
+    background: #09a552 !important;
+    border-color: #09a552 !important;
 }
 
 .submitButton:hover,
 .submitButton:focus {
-    text-transform: uppercase;
     background: #1fac6a !important;
     border-color: #1fac6a !important;
 }
 
 .cancelButton {
-    height: 45px !important;
+    height: 35px !important;
     padding-left: 25px !important;
     padding-right: 25px !important;
-    text-transform: uppercase;
-    background: #333f48 !important;
-    border-color: #333f48 !important;
+    background-color: white;
+    color: #333f48;
+    border: 1px solid #d9d9d9 !important;
 }
 
 .cancelButton:hover,
 .cancelButton:focus {
-    background: #43525d !important;
-    border-color: #43525d !important;
+    background-color: white;
+    color: #333f48;
+    border: 1px solid #d9d9d9 !important;
 }
 
 .deleteButton {
-    height: 45px !important;
+    height: 35px !important;
     padding-left: 25px !important;
     padding-right: 25px !important;
-    text-transform: uppercase;
     background: #ec454d !important;
     border-color: #ec454d !important;
 }
 
 .deleteButton:hover,
 .deleteButton:focus {
-    text-transform: uppercase;
     background: #ec454d !important;
     border-color: #ec454d !important;
 }
