--- a/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserMultiEdit/UserMultiEdit.module.css
+++ b/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserMultiEdit/UserMultiEdit.module.css
@@ -1,15 +1,6 @@
 .container {
-    display: flex;
-    width: 100%;
-    max-width: 1000px;
-    flex-wrap: wrap;
     color: #494949;
-}
-
-.content {
-    display: flex;
-    flex: 1 1 0;
-    flex-direction: column;
+    padding: 20px;
     min-width: 500px;
 }
 
@@ -18,124 +9,41 @@
     font-size: 12px;
 }
 
+.header {
+    margin-bottom: 25px;
+}
+
 .pageTitle {
-    display: flex;
-    align-items: center;
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .formContainer {
-    flex: 1 0 0;
+    width: 100%;
+    background-color: #f7f7f7;
+    padding: 25px 25px 46px 25px ;
+    margin-bottom: 15px;
 }
 
 .form {
-    width: 80%;
-    padding-top: 50px;
-}
-
-.formLeft {
-    display: flex !important;
+    display: flex;
     align-items: center;
+    max-width: 900px;
 }
 
-.form label::after {
-    content: '';
-}
-
-form.form input {
-    border-radius: 7px;
-    caret-color: #21ba72;
-}
-
-form.form input.hasError {
-    border-color: #ec464e;
-}
-
-form.form input:hover {
-    border-color: #21ba72;
-}
-
-form.form input:focus {
-    border-color: #21ba72;
-    box-shadow: none;
-}
-
-.form button:not(:last-child) {
-    margin-right: 15px;
-}
-
-.form button {
-    text-transform: uppercase;
+.form > div {
+    flex-basis: 50% !important;
 }
 
 .formError {
-    color: #ec454e;
+    margin-top: 15px;
+    color: #ec464e;
 }
 
-.labelRow {
-    display: flex;
-    align-items: center;
-    margin-bottom: 24px;
-    min-height: 40px;
+.buttonsContainer button:not(:last-child) {
+    margin-right: 15px;
 }
 
-.buttonsContainer {
-    display: flex;
-}
-
-.center {
-    text-align: center;
-    justify-content: center;
-}
-
-.cancelButton {
-    height: 45px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    text-transform: uppercase;
-    background: #333f48 !important;
-    border-color: #333f48 !important;
-}
-
-.cancelButton:hover,
-.cancelButton:focus {
-    background: #43525d !important;
-    border-color: #43525d !important;
-}
-
-.submitButton {
-    height: 45px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    text-transform: uppercase;
-    background: #21ba72 !important;
-    border-color: #21ba72 !important;
-}
-
-.submitButton:hover,
-.submitButton:focus {
-    text-transform: uppercase;
-    background: #1fac6a !important;
-    border-color: #1fac6a !important;
-}
-
-.deleteButton {
-    height: 45px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    text-transform: uppercase;
-    background: #ec454d !important;
-    border-color: #ec454d !important;
-}
-
-.deleteButton:hover,
-.deleteButton:focus {
-    text-transform: uppercase;
-    background: #ec454d !important;
-    border-color: #ec454d !important;
-}
-
-.buttonsContainer :global(.ant-btn[disabled]){
-    color:#ebe8e8 !important;
+.buttonsContainer :global(.ant-btn[disabled]) {
+    color: #ebe8e8 !important;
 }
