--- a/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserSkeletonLoading/UserSkeletonLoading.module.css
+++ b/src/containers/UsersPage/RedesignedUsersPage/UserPage/UserSkeletonLoading/UserSkeletonLoading.module.css
@@ -1,26 +1,71 @@
 .skeleton {
-    display: flex;
+    padding: 25px;
 }
 
-.flexSkeleton {
+.labelsWrapperSkeleton {
     display: flex;
-    flex-direction: column;
-}
-
-.LabelsWrapperSkeleton {
     margin-top: 30px;
+    padding: 20px;
+    width: 100%;
+    height: 110px;
+    background-color: #f7f7f7;
 }
 
-.labelsSkeleton {
+.labelsWrapperSkeleton:nth-child(3) {
     margin-top: 15px;
 }
 
-.buttonsSkeleton {
-    margin-top: 40px;
-}
-
-.rightSkeleton {
-    margin-top: 10px;
+.labelsSkeleton {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    flex-basis: 40%;
+    margin-right: 10px;
+}
+
+.labelsSkeleton:first-child {
+    flex-basis: 30%;
+}
+
+.labelsSkeleton :global(.ant-skeleton) {
+    max-width: 300px;
+    min-width: 240px;
+}
+
+.labelsSkeleton:first-child :global(.ant-skeleton) {
+    min-width: 200px;
+    max-width: 250px;
+}
+
+.skeletonCheckBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1000px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.skeletonCheckBox > div {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.skeletonCheckBox > div :global(.ant-skeleton-element) {
+    max-width: 200px;
+}
+
+.buttonsSkeleton {
+    margin-top: 25px;
+}
+
+.buttonsSkeleton > div {
+    max-width: 150px;
+    width: 100%;
+}
+
+.buttonsSkeleton > div:not(:last-child) {
+    margin-right: 15px;
 }
