Pull request #79: Feature/WDZO-1193 redesign promo-campagn page
Squashed commit of the following:

commit 6966c2659ca468b010511629a6e4633d81adc522
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 25 15:23:51 2020 +0300

    WDZO-1193: add rules text field for git type promo-campaign

commit a982fb0a7bed8195107d7c39ab8c3a2367ee64ac
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 25 14:10:58 2020 +0300

    WDZO-1193: fix required fields and other fixes

commit 19adabe5182af089cac9aa2714e53224147f7f8f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 25 10:46:40 2020 +0300

    WDZO-1193: fix styles for image upload

commit e0468d2b4448a02bbb8035be33493713bc733217
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Dec 25 09:58:21 2020 +0300

    WDZO-1193: Add new consts and some refactor

commit dff4735e7fd14879ad208d1cc96368a22e3b0727
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Dec 25 09:50:39 2020 +0300

    WDZO-1193: fix upload images
    fix visibility setting in create promo-campaign form
    some refactoring

commit c411805362010dda26ab2bf6208fe6828d787a26
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Dec 24 17:20:09 2020 +0300

    WDZO-1193: refactor promoCampaignForm, edit validate

commit 2a6eceefdc3a44b541b8b50deb76d787aabf09ed
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Thu Dec 24 17:13:06 2020 +0300

    WDZO-1193: fix bug with date in PromoCampaignInfo

commit a99a911b21bec06f957d391af7a2660593c6322a
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Dec 24 12:28:11 2020 +0300

    WDZO-1193: refactor some code

commit ddf2cc55e828a15bd18dbfbdbe6398b680647011
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Dec 24 11:48:49 2020 +0300

    WDZO-1193: Changed styles and refactor code StepInfo

commit c28ae4f9f13cb8895bbc96a026c800b9f6d5ea9f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Dec 24 11:45:05 2020 +0300

    WDZO-1193: some refactor

--- a/src/components/DropdownWithAction/DropdownWithAction.module.css
+++ b/src/components/DropdownWithAction/DropdownWithAction.module.css
@@ -22,9 +22,9 @@ button.dropdownButton:focus {
 }
 
 .dropdownMenuItem:hover {
-    background-color: #f8f8f8;
+    color: #2ac673;
 }
 
 .dropdownMenuItem.active {
-    color: #21ba72;
+    color: #09a552;
 }
