--- a/src/components/Header/Redisegnedheader/Header.module.css
+++ b/src/components/Header/Redisegnedheader/Header.module.css
@@ -3,11 +3,12 @@
     justify-content: space-between;
     background-color: #ffffff;
     padding: 15px 20px;
+    border-bottom: 1px solid #e5e8ea;
     font-family: SBSansText, sans-serif;
-    font-size: 18px;
-    letter-spacing: -0.5px;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.3px;
     font-weight: 600;
-    border-bottom: 1px solid #d4d9de;
     align-items: center;
 }
 
@@ -31,22 +32,22 @@
 }
 
 .menuItem:hover {
-    color: #21ba72;
+    color: #09a552;
 }
 
 .active {
-    color: #21ba72;
+    color: #21a038;
     position: relative;
 }
 
 .active::after {
     content: '';
     position: absolute;
-    bottom: -18px;
+    bottom: -21px;
     left: 0;
     width: 100%;
     height: 3px;
-    background-color: #21ba72;
+    background-color: #09a552;
     right: 0;
     margin: 0 auto;
     display: block;
