--- a/src/components/HeaderWithActions/HeaderWithActions.module.css
+++ b/src/components/HeaderWithActions/HeaderWithActions.module.css
@@ -1,6 +1,17 @@
 .wrapper {
     padding: 20px;
     background-color: #ffffff;
+    letter-spacing: -0.3px;
+}
+
+.headerTitle {
+    font-family: SBSansText;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+    letter-spacing: -0.38px;
+    color: #171725;
+    margin-bottom: 16px;
 }
 
 .actions {
@@ -21,11 +32,13 @@
 
 button.button {
     margin-right: 10px;
+    font-family: SBSansText-medium;
 }
 
 button.button.btn_primary {
     background: #09a552;
     border-color: #09a552;
+    font-family: SBSansText;
 }
 
 button.button.btn_primary:hover,
@@ -35,8 +48,8 @@ button.button.btn_primary:focus {
 
 button.button:hover,
 button.button:focus {
-    border-color: #21ba72;
-    color:  #21ba72;
+    border-color: #09a552;
+    color:  #09a552;
 }
 
 .searchInput span[role='img'] {
@@ -45,11 +58,11 @@ button.button:focus {
 
 span.searchInput:hover,
 span.searchInput:focus {
-    border-color: #21ba72;
+    border-color: #09a552;
 }
 
 span.searchInput:focus,
 span.searchInput:global(.ant-input-affix-wrapper-focused) {
     box-shadow: 0 0 0 2px rgba(33, 186, 114, 0.2);
-    border-color: #21ba72;
+    border-color: #09a552;
 }
