--- a/src/containers/TableUser/UsersListTable.module.css
+++ b/src/containers/TableUser/UsersListTable.module.css
@@ -32,22 +32,6 @@
     display: inline-block;
 }
 
-.paginationWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.pagination {
-    display: flex;
-    margin: 16px 0;
-    justify-content: flex-end;
-}
-
-.pageSizes {
-    margin-left: 10px;
-}
-
 /* GLOBALS */
 .table :global(.ant-table) {
     color: #171725;
@@ -80,28 +64,28 @@
     border-color: #09a552 !important;
 }
 
-.paginationWrapper :global(.ant-select-focused:not(.ant-select-disabled).ant-select-single .ant-select-selector),
-.pagination :global(.ant-pagination-options-quick-jumper input:focus) {
+.table :global(.ant-select-focused:not(.ant-select-disabled).ant-select-single .ant-select-selector),
+.table :global(.ant-pagination-options-quick-jumper input:focus) {
     box-shadow: none;
 }
 
-.pagination :global(.ant-pagination-item-active),
-.pagination :global(.ant-pagination-item:hover),
-.pagination :global(.ant-pagination-item:focus),
-.pagination :global(.ant-pagination-prev:hover button:not(:disabled)),
-.pagination :global(.ant-pagination-next:hover button:not(:disabled)),
-.paginationWrapper :global(.ant-select:not(.ant-select-disabled):hover .ant-select-selector),
-.paginationWrapper :global(.ant-select-focused:not(.ant-select-disabled).ant-select-single .ant-select-selector),
-.pagination :global(.ant-pagination-options-quick-jumper input:hover),
-.pagination :global(.ant-pagination-options-quick-jumper input:focus) {
+.table :global(.ant-pagination-item-active),
+.table :global(.ant-pagination-item:hover),
+.table :global(.ant-pagination-item:focus),
+.table :global(.ant-pagination-prev:hover button:not(:disabled)),
+.table :global(.ant-pagination-next:hover button:not(:disabled)),
+.table :global(.ant-select:not(.ant-select-disabled):hover .ant-select-selector),
+.table :global(.ant-select-focused:not(.ant-select-disabled).ant-select-single .ant-select-selector),
+.table :global(.ant-pagination-options-quick-jumper input:hover),
+.table :global(.ant-pagination-options-quick-jumper input:focus) {
     border-color: #09a552;
 }
 
-.pagination :global(.ant-pagination-item-active a),
-.pagination :global(.ant-pagination-item:hover a),
-.pagination :global(.ant-pagination-item:focus a),
-.pagination :global(.ant-pagination-prev:hover button:not(:disabled)),
-.pagination :global(.ant-pagination-next:hover button:not(:disabled)) {
+.table :global(.ant-pagination-item-active a),
+.table :global(.ant-pagination-item:hover a),
+.table :global(.ant-pagination-item:focus a),
+.table :global(.ant-pagination-prev:hover button:not(:disabled)),
+.table :global(.ant-pagination-next:hover button:not(:disabled)) {
     color: #09a552;
 }
 /* GLOBALS */
