WDZO-1193, WDZO-1306, WDZO-1331: redesigned DzoPage and CategoryPage started; added ability to change appUrl in dzo; refactored

--- a/src/components/CategoryItem/CategoryItem.module.css
+++ b/src/components/CategoryItem/CategoryItem.module.css
@@ -83,3 +83,32 @@
 .red {
     color: #da7675;
 }
+
+.button {
+    height: 35px !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+}
+
+.submitButton {
+    background: #09a552 !important;
+    border-color: #09a552 !important;
+}
+
+.submitButton:hover,
+.submitButton:focus {
+    background: #1fac6a !important;
+    border-color: #1fac6a !important;
+}
+
+
+.deleteButton {
+    background: #da7675 !important;
+    border-color: #da7675 !important;
+}
+
+.deleteButton:hover,
+.deleteButton:focus {
+    background: #da7675 !important;
+    border-color: #da7675 !important;
+}
