--- a/src/components/Header/Redisegnedheader/Header.module.css
+++ b/src/components/Header/Redisegnedheader/Header.module.css
@@ -1,4 +1,6 @@
 .container {
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     background-color: #ffffff;
@@ -10,6 +12,8 @@
     letter-spacing: -0.3px;
     font-weight: 600;
     align-items: center;
+    overflow: hidden;
+    z-index: 20;
 }
 
 .backButton {
