WDZO-1193: added styles for antd Button in index.css (by types)

--- a/src/containers/Dashboard/Dashboard.module.css
+++ b/src/containers/Dashboard/Dashboard.module.css
@@ -55,7 +55,7 @@ button:last-child {
     align-items: center;
     padding: 5px 10px;
     border: grey solid 1px;
-    margin-right: 16px;
+    margin-left: 16px;
 }
 
 .menuFilter:hover {
