--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,25 @@ body, ul, li, p {
     color: #ec464e;
     margin-right: 3px;
 }
+
+.ant-btn-primary,
+.ant-btn-primary:hover,
+.ant-btn-primary:focus {
+    background-color: #09a552 !important;
+    border-color: #09a552 !important;
+}
+
+.ant-btn-danger,
+.ant-btn-danger:hover,
+.ant-btn-danger:focus {
+    background-color: #dd283b !important;
+    border-color: #dd283b !important;
+}
+
+/*.ant-btn-ghost,*/
+/*.ant-btn-ghost:hover,*/
+/*.ant-btn-ghost:focus {*/
+/*    background-color: white;*/
+/*    color: #333f48;*/
+/*    border: 1px solid #d9d9d9 !important;*/
+/*}*/
