Pull request #99: WDZO-1347: removed fetch files for second step of promo-campaign form
Squashed commit of the following:

commit 227f9750a7d1b099ced362e1584d94e4f58a3a46
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Jan 22 09:54:24 2021 +0300

    WDZO-1347: fix templateConstants(logo-main,secondary and screen)

commit 82d7d368ccd86a9356f02a92e05d484db101e9ac
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Jan 22 08:55:45 2021 +0300

    WDZO-1347: fixed bug when deleting file

commit c39dad43790573cc5c35efce78e50a05bb916348
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Jan 21 17:53:26 2021 +0300

    WDZO-1347: fix style in LabelWithTooltip, UploadFile and change maxLength in templateConstants

commit f4a89250814894292d8aee9639e32e8ad82959a2
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Jan 21 16:22:42 2021 +0300

    WDZO-1347: fix labelTooltip and Template label

commit 09ec42b526e82a0169c4fce16ba434744d32a318
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Jan 21 15:17:31 2021 +0300

    WDZO-1347: rename TooltipLabel and fix rules in templateConstants

commit b0564daea87a738a06cb858371788b7c8f4c3165
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Jan 20 17:37:45 2021 +0300

    WDZO-1347: removed fetch files for second step of promo-campaign form
    refactoring

--- a/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
+++ b/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
@@ -1,4 +1,4 @@
-.image {
+.banner {
     width: 100%;
 }
 
@@ -23,15 +23,15 @@
     margin-bottom: 16px;
 }
 
-.icon {
+.logo {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-.imageIcon {
-    margin-top: -70px;
+.imageLogo {
+    transform: translateY(-45%);
 }
 
 .footer {
