--- a/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepTextAndImage/Templates/Template.module.css
+++ b/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepTextAndImage/Templates/Template.module.css
@@ -1,4 +1,4 @@
-.image {
+.banner {
     width: 100%;
 }
 
@@ -23,14 +23,14 @@
     margin-bottom: 16px;
 }
 
-.icon {
+.logo {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-.imageIcon {
+.imageLogo {
     margin-top: -70px;
 }
 
