--- a/src/containers/Dashboard/DashboardItem/DashboardItem.module.css
+++ b/src/containers/Dashboard/DashboardItem/DashboardItem.module.css
@@ -1,6 +1,6 @@
 .item {
+    min-width: 320px;
     width: calc(50% - 16px);
-    min-width: 300px;
     padding: 8px;
     margin: 0 8px 16px;
     display: flex;
@@ -10,6 +10,11 @@
     background-color: #ffffff;
 }
 
+@media (min-width: 1024px) {
+    .item {
+        max-width: calc(50% - 16px);
+    }
+}
 
 .item:last-child:nth-child(odd) {
     margin-bottom: 0;
